# imsdiameterstack

./: README.md
appcommon/: Makefile.am  autogen.sh  configure.ac  configure.scan  install-libs.sh  libdiamappcommon-1.0.pc  libdiamappcommon.pc.in
appcommon/include/amps/: AMPS_API.h  AMPS_Defines.h
appcommon/lib/: libamps-1.0.so.0.1.0  libxml2.so.2.6.32
appcommon/src/: Makefile.am  dappcommon_dbqueryload.c  dappcommon_dbqueryload.h  dappcommon_helpers.c  dappcommon_helpers.h  dappcommon_srvrconfload.c  dappcommon_xmlutils.c
appcommon/trunk/: autoclean.sh  config.h.in  configure.ac  libdiamappcommon.spec.in
appcommon/trunk/src/: Makefile.am  dappcommon_srvrconfload.h  dappcommon_xmlutils.h
baseprotocol/: Makefile.am  config.h.in  configure.ac  libdiameter-1.0.pc  libdiameter.pc.in
baseprotocol/src/: Makefile.am  dmbase_cer_processing.h  dmbase_debug.c  dmbase_dictionary.c  dmbase_includes.h  dmbase_initconfig.h  dmbase_message.c  dmbase_message.h  dmbase_peer_mgmt.c  dmbase_peerstatemachine.h  dmbase_realmtablemgmt.c  dmbase_realmtablemgmt.h  dmbase_transport_mgmt.h  dmbase_utility.c
baseprotocol/trunk/: configure.ac  libdiameter.spec.in
baseprotocol/trunk/src/: Makefile.am  dmbase_ampswrappers.c  dmbase_ampswrappers.h  dmbase_appcallbackreg.c  dmbase_appcallbackreg.h  dmbase_avp.c  dmbase_avp.h  dmbase_cer_processing.c  dmbase_data_types.h  dmbase_debug.h  dmbase_dictionary.h  dmbase_failover_failback.c  dmbase_failover_failback.h  dmbase_initconfig.c  dmbase_msgvalidate.c  dmbase_msgvalidate.h  dmbase_parser.c  dmbase_parser.h  dmbase_peer_mgmt.h  dmbase_peerstatemachine.c  dmbase_psm_actions.c  dmbase_psm_actions.h  dmbase_transport_mgmt.c  dmbase_utility.h
